Enhance DiceTrack component by adding path aliases for components and updating grid creation logic. Introduce utility functions for geometry and grid management, improving code organization and maintainability.

--- a/color-wars/tsconfig.app.json
+++ b/color-wars/tsconfig.app.json
@@ -28,6 +28,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
       ]
     }
   },
