added map inside dicetrack

--- a/color-wars/tsconfig.app.json
+++ b/color-wars/tsconfig.app.json
@@ -32,7 +32,8 @@
       "@components/*": [
         "./src/components/*"
       ]
-    }
+    },
+    "types": ["vite/client", "@pixi/react"]
   },
   "include": ["src"]
 }
