--- a/color-wars/package.json
+++ b/color-wars/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "honeycomb-grid": "^4.1.5",
     "lucide-react": "^0.544.0",
+    "@pixi/react": "^8.0.3",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.13.2",
     "react": "^19.1.1",
