--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "tsx src/index.ts",
-    "dev": "NODE_ENV=development tsx watch src/index.ts"
+    "dev": "NODE_ENV=development tsx watch src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@colyseus/monitor": "^0.16.6",
