--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@colyseus/schema": "^3.0.62",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
+    "@radix-ui/react-popover": "^1.1.15",
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,7 +35,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react-swc": "^4.0.1",
+    "@vitejs/plugin-react-swc": "^4.0.2",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
