feat: replace old dice component with BetterDice

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "colyseus.js": "^0.16.21",
     "honeycomb-grid": "^4.1.5",
     "lucide-react": "^0.544.0",
+    "nanoid": "^3.3.11",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.13.2",
     "react": "^19.1.1",
