--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ tutorial-phaser
 color-wars-key.pem
 node_modules
 server/dist
+shared/dist
+server/node_modules
+shared/node_modules
+client/node_modules
+helpers/hex-map-editor/node_modules
