--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color-wars",
+  "name": "@color-wars/client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@colyseus/schema": "^3.0.62",
+    "@colyseus/schema": "^3.0.70",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "colyseus.js": "^0.16.21",
+    "colyseus.js": "^0.16.22",
     "honeycomb-grid": "^4.1.5",
+    "immer": "^11.0.1",
     "lucide-react": "^0.544.0",
     "nanoid": "^3.3.11",
+    "next-themes": "^0.4.6",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
@@ -36,7 +41,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react-swc": "^4.0.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -44,6 +49,7 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vite-plugin-babel": "^1.3.2"
   }
 }
