--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "color-wars-monorepo",
+  "name": "color-wars",
   "version": "1.0.0",
   "private": true,
   "workspaces": [
     "client",
-    "server"
+    "server",
+    "shared"
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=server\" \"npm run dev --workspace=client\"",
     "build": "npm run build --workspaces",
-    "lint": "npm run lint --workspaces"
+    "lint": "npm run lint --workspaces",
+    "clean": "npx rimraf node_modules package-lock.json client/node_modules client/package-lock.json server/node_modules server/package-lock.json",
+    "reset": "npm run clean && npm install"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "concurrently": "^9.1.2",
+    "vite-plugin-babel": "^1.3.2"
   }
 }
