--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "color-wars-server",
+  "name": "@color-wars/server",
   "version": "0.1.0",
   "description": "Colyseus backend for Color Wars",
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "dev": "NODE_ENV=development tsx watch src/index.ts",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon",
     "build": "tsc"
   },
   "dependencies": {
-    "@colyseus/monitor": "^0.16.6",
-    "@colyseus/playground": "^0.16.3",
-    "@colyseus/tools": "^0.16.13",
-    "@colyseus/ws-transport": "^0.16.0",
-    "colyseus": "^0.16.0",
+    "@colyseus/monitor": "^0.16.7",
+    "@colyseus/playground": "^0.16.4",
+    "@colyseus/tools": "^0.16.14",
+    "@colyseus/ws-transport": "^0.16.5",
+    "colyseus": "^0.16.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nanoid": "^5.0.7",
@@ -24,6 +24,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.5",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
