--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,6 +14,6 @@
     "types": ["node"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*", "shared/src/**/*"],
   "exclude": ["node_modules"]
 }
