--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@colyseus/schema": "^3.0.70",
+    "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
     "@radix-ui/react-popover": "^1.1.15",
