feat: Enhance TypeScript configuration and add new path aliases for improved module resolution

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -29,7 +29,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@animation/*": ["./src/animation/*"],
+      "@actions/*": ["./src/actions/*"],
+      "@store/*": ["./src/store/*"],
+      "@gsap": ["./src/lib/gsap.ts"],
     },
     "types": ["vite/client", "@pixi/react"]
   },
