refactor: Remove ESLint configuration and related dependencies, update TypeScript configurations, and clean up unused code

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -37,5 +37,5 @@
     },
     "types": ["vite/client", "@pixi/react"]
   },
-  "include": ["src", "../shared/src/types/registry.ts"]
+  "include": ["src"]
 }
