--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.13",
     "@vitejs/plugin-react": "^5.1.1",
