--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -23,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "colyseus.js": "^0.16.22",
+    "date-fns": "^4.1.0",
     "gsap": "^3.14.1",
     "honeycomb-grid": "^4.1.5",
     "immer": "^11.0.1",
@@ -38,6 +41,7 @@
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
