--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@colyseus/schema": "^3.0.70",
+    "@gsap/react": "^2.1.2",
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.2.0",
     "@pixi/react": "^8.0.3",
