--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript-eslint": "^8.49.0",
     "vite-plugin-babel": "^1.3.2"
+  },
+  "dependencies": {
+    "hover-tilt": "^1.0.0"
   }
 }
